--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My First Website</title>
+        <meta name="author" content="Raina Talwar">    
+        <title>Steve Jobs | Apple CEO</title>
     </head>
     <body>
      <p> Hello, World, and welcome to my first website!</p> 
-        <p>Test</p>
+        <p>I will continue to update this page regularly! So be sure to check back in every week or so! </p>
     </body>
 </html>
