--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         
             <!-- Using the text "C.E. Truffaut" create an email hyperlink for the email address "ce.truffaut@cwu.edu". --> 
         
-            <p> <a href="top"> Back to top</a></p> </div>
+            <p> <a href="#top"> Back to top</a></p> </div>
             <div class="copyright"><p>&copy; 2020 <a href="mailto:ce.truffaut@cwu.edu">C.E.Truffaut </a></p> </div>
         </footer>
     </body>
